# etl_framework

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: postgres-init.sql
examples/retail/entities/: dds_clients_scd2.yaml  dds_products_scd1.yaml  dm_orders_daily.yaml  ods_orders.yaml  stg_clients.yaml
examples/retail/sources/: postgres_oltp.yaml
src/etl_framework/: __init__.py
src/etl_framework/cli/: __init__.py  main.py
src/etl_framework/codegen/: __init__.py  airflow_gen.py  engine.py  sql_gen.py
src/etl_framework/codegen/templates/airflow/: dag.py.j2
src/etl_framework/codegen/templates/pyspark/: _macros.j2  full_load.py.j2  incremental.py.j2  scd1.py.j2  scd2.py.j2
src/etl_framework/codegen/templates/sql/: clickhouse_export.sql.j2  greenplum_export.sql.j2
src/etl_framework/discovery/: __init__.py  postgres.py
src/etl_framework/lineage/: __init__.py  builder.py  openlineage_export.py  openmetadata.py
src/etl_framework/models/: __init__.py  entity.py  enums.py  mapping.py  schedule.py  source.py  strategy.py  target.py
src/etl_framework/orchestration/: __init__.py
src/etl_framework/repository/: __init__.py  validation.py  yaml_repo.py
src/etl_framework/security/: __init__.py  audit.py  secrets.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_discovery.py  test_lineage.py  test_models.py  test_repository.py  test_security.py
